# setwallpaper

./: .gitignore  LICENSE  README.md  setup.cfg
setwallpaper/: __init__.py  wallpaper.py  win.py
