[metadata]
name = setwallpaper
version = 0.0.1
author = tinaxd
author_email = tinaxd@protonmail.com
description = A library to change the desktop wallpaper.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tinaxd/setwallpaper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = setwallpaper
